# DNN

./: .gitignore  detect_plate.ipynb  ocr_model_real.keras  pyproject.toml  requirements.txt  test_full_pipeline.ipynb  train_ocr_real.ipynb
src/project_dnn/: __init__.py  ocr.py
