[project]
name = "project-dnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "datasets==3.6.0",
    "fast-alpr>=0.3.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyyaml>=6.0.3",
    "tensorflow>=2.20.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
